fixed vertical spacing within coach module, yay

--- a/app/assets/stylesheets/coach.scss
+++ b/app/assets/stylesheets/coach.scss
@@ -18,6 +18,7 @@
   margin: auto;
   margin-top: 10px;
   position: relative;
+
  }
 
 .coach-chat-triangle{
@@ -30,9 +31,11 @@
   border: 10px solid #00A99D;
   border-left-color: transparent;
   border-bottom-color: transparent;
+  float: left;
 }
 
 .coach-question{
+  margin-top: -25px;
   font-size: 16px;
   font-family: 'Gill Sans', Tahoma, Geneva, sans-serif;
   font-weight: 300;
